--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -4,28 +4,14 @@ body{
 }
 
 .nav{
-  background-color: #333;
-  overflow: hidden;
-}
+  color: antiquewhite;
 
+}
 .nav a{
- 
-    float: left;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
- 
+  text-decoration: "none";
+  
+
 }
-
-.nav a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-
-
 
 
   
